WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174881
REGRESSION (
r211160
): Can't pinch to zoom unlocked encrypted PDFs in WKWebView
https://bugs.webkit.org/show_bug.cgi?id=174881
Summary
REGRESSION (r211160): Can't pinch to zoom unlocked encrypted PDFs in WKWebView
Tim Horton
Reported
2017-07-26 17:55:03 PDT
REGRESSION (
r211160
): Can't pinch to zoom unlocked encrypted PDFs in WKWebView
Attachments
Patch
(1.69 KB, patch)
2017-07-26 17:57 PDT
,
Tim Horton
aestes
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-07-26 17:57:33 PDT
Created
attachment 316500
[details]
Patch
Andy Estes
Comment 2
2017-07-26 18:11:27 PDT
Comment on
attachment 316500
[details]
Patch Oops! Thanks for fixing.
Tim Horton
Comment 3
2017-07-26 18:50:47 PDT
https://trac.webkit.org/changeset/219973/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug