REGRESSION (r211160): Can't pinch to zoom unlocked encrypted PDFs in WKWebView https://bugs.webkit.org/show_bug.cgi?id=174881 <rdar://problem/33556312>

Reviewed by Andy Estes.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _hidePasswordView]):
WKPasswordView saves and restores a bunch of scroll view properties, including
those relating to zoom limits. The restoration happens in -[WKPasswordView hide],
which is never called. Instead, the code added in r211160 just calls
removeFromSuperview after unlocking, never restoring the old zoom limits,
causing the then fully unlocked PDF to not be zoomable. Fix this by calling
-hide instead of -removeFromSuperview (which -hide also calls).


Canonical link: https://commits.webkit.org/191703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219973 268f45cc-cd09-0410-ab3c-d52691b4dbfc